improve values files by remove colors and dimens not usage

--- a/app/src/main/res/layout/fragment_b_m_i.xml
+++ b/app/src/main/res/layout/fragment_b_m_i.xml
@@ -21,7 +21,7 @@
         android:id="@+id/Arc_Progress"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginTop="@dimen/margin_4dp"
+        android:layout_marginTop="@dimen/very_small_margin"
         app:arc_bottom_text="BMI"
         app:arc_bottom_text_size="28sp"
         app:arc_finished_color="@color/color_yellow"
@@ -48,11 +48,11 @@
         android:id="@+id/overweightTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_8dp"
+        android:layout_marginTop="@dimen/small_margin"
         android:layout_marginEnd="60dp"
         android:text="@string/overweight_text"
         android:textColor="@color/text_color"
-        android:textSize="@dimen/text_size_16sp"
+        android:textSize="@dimen/small_text_size"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Arc_Progress" />
@@ -61,7 +61,7 @@
         android:id="@+id/circleRedIV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/margin_4dp"
+        android:layout_marginEnd="@dimen/very_small_margin"
         android:src="@drawable/circle_red"
         app:layout_constraintBottom_toBottomOf="@+id/overweightTV"
         app:layout_constraintEnd_toStartOf="@+id/overweightTV"
@@ -71,10 +71,10 @@
         android:id="@+id/normalTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/margin_16dp"
+        android:layout_marginEnd="@dimen/default_margin"
         android:text="@string/normal_text"
         android:textColor="@color/text_color"
-        android:textSize="@dimen/text_size_16sp"
+        android:textSize="@dimen/small_text_size"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/overweightTV"
         app:layout_constraintEnd_toStartOf="@+id/circleRedIV"
@@ -84,7 +84,7 @@
         android:id="@+id/circleBlueIV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/margin_4dp"
+        android:layout_marginEnd="@dimen/very_small_margin"
         android:src="@drawable/circle_blue"
         app:layout_constraintBottom_toBottomOf="@+id/normalTV"
         app:layout_constraintEnd_toStartOf="@id/normalTV"
@@ -94,10 +94,10 @@
         android:id="@+id/underWeightTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/margin_16dp"
+        android:layout_marginEnd="@dimen/default_margin"
         android:text="@string/underweight_text"
         android:textColor="@color/text_color"
-        android:textSize="@dimen/text_size_16sp"
+        android:textSize="@dimen/small_text_size"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/circleBlueIV"
         app:layout_constraintTop_toTopOf="@+id/normalTV" />
@@ -106,7 +106,7 @@
         android:id="@+id/circleYellow_IV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/margin_4dp"
+        android:layout_marginEnd="@dimen/very_small_margin"
         android:src="@drawable/circle_yellow"
         app:layout_constraintBottom_toBottomOf="@+id/underWeightTV"
         app:layout_constraintEnd_toStartOf="@id/underWeightTV"
@@ -118,8 +118,8 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="242dp"
         android:layout_height="56dp"
-        android:layout_marginTop="@dimen/margin_8dp"
-        android:hint="Weight"
+        android:layout_marginTop="@dimen/small_margin"
+        android:hint="@string/weight"
         app:counterEnabled="true"
         app:counterMaxLength="9"
         app:endIconMode="clear_text"
@@ -142,8 +142,8 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="242dp"
         android:layout_height="56dp"
-        android:layout_marginBottom="@dimen/margin_8dp"
-        android:hint="Height"
+        android:layout_marginBottom="@dimen/small_margin"
+        android:hint="@string/height"
         app:counterEnabled="true"
         app:counterMaxLength="8"
         app:endIconMode="clear_text"
@@ -164,7 +164,7 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="0dp"
         android:layout_height="56dp"
-        android:layout_marginStart="@dimen/margin_16dp"
+        android:layout_marginStart="@dimen/default_margin"
         app:layout_constraintBottom_toBottomOf="@+id/WeightTIL"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/WeightTIL"
@@ -185,7 +185,7 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="0dp"
         android:layout_height="56dp"
-        android:layout_marginStart="@dimen/margin_16dp"
+        android:layout_marginStart="@dimen/default_margin"
         app:layout_constraintBottom_toBottomOf="@+id/heightTIL"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/heightTIL"
@@ -206,9 +206,9 @@
         style="@style/Widget.Material3.Button.ElevatedButton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_8dp"
+        android:layout_marginBottom="@dimen/small_margin"
         android:text="@string/calculate_text"
-        android:textSize="@dimen/margin_16dp"
+        android:textSize="@dimen/small_text_size"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -222,7 +222,7 @@
         android:layout_height="202dp"
         android:background="@drawable/background_for_bmi_result"
         android:orientation="vertical"
-        android:padding="@dimen/padding_8dp"
+        android:padding="@dimen/default_padding"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -233,7 +233,7 @@
             android:layout_height="wrap_content"
             android:text="@string/result_text"
             android:textColor="@color/text_color"
-            android:textSize="@dimen/text_size_16sp"
+            android:textSize="@dimen/small_text_size"
             android:textStyle="bold" />
         <!--TextView result-->
         <TextView
@@ -242,7 +242,7 @@
             android:layout_height="wrap_content"
             android:text="@string/text_type_in_result"
             android:textColor="@color/color_red"
-            android:textSize="@dimen/title_text_view_24sp"
+            android:textSize="@dimen/headline_small"
             android:textStyle="bold"
             tools:layout_editor_absoluteX="91dp"
             tools:layout_editor_absoluteY="165dp" />
@@ -250,19 +250,19 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_8dp"
+            android:layout_marginTop="@dimen/small_margin"
             android:text="@string/tips_text"
             android:textColor="@color/text_color"
-            android:textSize="@dimen/text_size_16sp"
+            android:textSize="@dimen/small_text_size"
             android:textStyle="bold" />
         <!--TextView some tips-->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/padding_4dp"
+            android:padding="@dimen/small_padding"
             android:text="@string/tips"
             android:textColor="@color/text_color"
-            android:textSize="@dimen/text_size_16sp"
+            android:textSize="@dimen/small_text_size"
             android:textStyle="normal" />
 
     </LinearLayout>
