--- a/app/src/main/res/layout/fragment_detail_meal.xml
+++ b/app/src/main/res/layout/fragment_detail_meal.xml
@@ -24,7 +24,7 @@
             android:id="@+id/mealIv"
             android:layout_width="@dimen/image_width"
             android:layout_height="@dimen/image_width"
-            android:layout_marginTop="@dimen/big_margin"
+            android:layout_marginTop="@dimen/default_margin"
             android:src="@drawable/ic_launcher_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
             android:layout_marginTop="@dimen/default_margin"
             android:text="@string/app_name"
             android:textColor="@color/black"
-            android:textSize="@dimen/headline_text_size"
+            android:textSize="@dimen/medium_text_size_18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/default_margin"
-            android:layout_marginTop="@dimen/big_margin"
+            android:layout_marginTop="@dimen/default_margin"
             android:background="@drawable/meal_shape"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -156,7 +156,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/default_margin"
-            android:layout_marginTop="@dimen/big_margin"
+            android:layout_marginTop="@dimen/default_margin"
             android:layout_marginBottom="@dimen/default_margin"
             android:background="@drawable/meal_shape"
             android:orientation="vertical"
