--- a/app/src/main/res/layout/fragment_meal.xml
+++ b/app/src/main/res/layout/fragment_meal.xml
@@ -18,7 +18,7 @@
         android:id="@+id/mealRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="@dimen/large_margin"
+        android:layout_margin="@dimen/default_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:layout_gravity="bottom|end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="@dimen/large_margin"
+        android:layout_margin="@dimen/default_margin"
         app:backgroundTint="@color/chip_teal"
         android:contentDescription="@string/add_to_meal"
         app:srcCompat="@drawable/ic_baseline_add_24"/>
