--- a/app/src/main/res/layout/healthy_food.xml
+++ b/app/src/main/res/layout/healthy_food.xml
@@ -17,14 +17,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="@dimen/padding_8dp">
+            android:padding="@dimen/default_padding">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/healthyFoodImgV"
                 android:layout_width="@dimen/img_card_dimen"
                 android:layout_height="@dimen/img_card_dimen"
                 android:layout_gravity="center"
-                android:padding="@dimen/padding_8dp"
+                android:padding="@dimen/default_padding"
                 android:src="@drawable/pesto_chicken_zoodles" />
 
             <TextView
@@ -51,14 +51,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="@dimen/padding_8dp">
+            android:padding="@dimen/default_padding">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/healthyFoodImgV2"
                 android:layout_width="@dimen/img_card_dimen"
                 android:layout_height="@dimen/img_card_dimen"
                 android:layout_gravity="center"
-                android:padding="@dimen/padding_8dp"
+                android:padding="@dimen/default_padding"
                 android:src="@drawable/pesto_chicken_zoodles" />
 
             <TextView
@@ -84,14 +84,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="@dimen/padding_8dp">
+            android:padding="@dimen/default_padding">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/healthyFoodImgV3"
                 android:layout_width="@dimen/img_card_dimen"
                 android:layout_height="@dimen/img_card_dimen"
                 android:layout_gravity="center"
-                android:padding="@dimen/padding_8dp"
+                android:padding="@dimen/default_padding"
                 android:src="@drawable/pesto_chicken_zoodles" />
 
             <TextView
