--- a/app/src/main/res/layout/fragment_item_details.xml
+++ b/app/src/main/res/layout/fragment_item_details.xml
@@ -134,6 +134,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
             <TextView
+                android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:alpha=".7"
@@ -195,7 +196,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="121dp"
                 android:layout_height="56dp"
                 android:layout_marginStart="25dp"
@@ -208,6 +209,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:paddingLeft="10dp"
                     android:hint="Unit"
                     android:inputType="none" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -294,6 +296,7 @@
                 app:layout_constraintTop_toTopOf="@+id/imageView1" />
 
             <TextView
+                android:id="@+id/fiberamount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
@@ -340,7 +343,7 @@
                 app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/iron_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
@@ -392,6 +395,7 @@
                 app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
             <TextView
+                android:id="@+id/vitamin_c_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
@@ -444,6 +448,7 @@
                 app:layout_constraintTop_toTopOf="@+id/imageView" />
 
             <TextView
+                android:id="@+id/cholesterol"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
