--- a/app/src/main/res/layout/fragment_meal.xml
+++ b/app/src/main/res/layout/fragment_meal.xml
@@ -22,7 +22,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mealToolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/mealToolbar"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="vertical"/>
 
 
     <TextView
@@ -46,7 +48,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="@dimen/default_margin"
         app:backgroundTint="@color/chip_teal"
-        android:contentDescription="@string/add_to_meal"
-        app:srcCompat="@drawable/ic_baseline_add_24"/>
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        app:elevation="3dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
