--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -12,7 +12,7 @@
         android:title="@string/bmi" />
 
     <item
-        android:id="@+id/search_menu"
-        android:icon="@drawable/ic_baseline_search_24"
-        android:title="@string/search" />
+        android:id="@+id/diet_menu"
+        android:icon="@drawable/ic_diet"
+        android:title="@string/dietType" />
 </menu>
