--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -75,6 +75,16 @@
                 app:layout_constraintTop_toBottomOf="@id/totalCaloriesDayTv"/>
 
             <TextView
+                android:id="@+id/dietType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Standard Diet"
+                style="@style/subTitle"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="@id/centerGuide"
+                app:layout_constraintBottom_toTopOf="@id/carbsTv"/>
+
+            <TextView
                 android:id="@+id/carbsTv"
                 style="@style/bodyText"
                 android:layout_width="wrap_content"
